--- a/src/astro/components/button/button.scss
+++ b/src/astro/components/button/button.scss
@@ -9,3 +9,22 @@
     }
 
 }
+
+.option {
+    height: 30px;
+    min-width: 68px;
+    // margin: 0px 0px;
+    max-width: 200px;
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 0.08em;
+    background-color: transparent;
+    border: 1px solid rgb(87, 87, 87);
+    color: #fff;
+}
+
+.mo {
+    background-color: rgb(88, 88, 88);
+    border: rgb(110, 109, 109);
+    font-weight: 800;
+}
